[web] Fix LoadingIndicator alignment with AccountBar

--- a/web/style.css
+++ b/web/style.css
@@ -202,6 +202,7 @@ div.account-bar {
   font-weight: 600;
   padding: 0 6px;
   cursor: pointer;
+  float: right;
 }
 div.account-button {
   padding: 3px 4px 3px 8px;
